# CELaRAI_demo

./: .gitignore
backend/: .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  scratch.py
backend/backend/: config.yaml  main.py  run.sh
backend/backend/data/processed/: enchanted-wreath.md
backend/docs/: CONFIGURATION.md  FAQ.md  USING_OPENAI_COMPATIBLE_MODELS.md
backend/docs/yourbench/analysis/: view_sample_questions.md
backend/tests/integration/: test_pipeline.py
backend/yourbench/: main.py
backend/yourbench/analysis/: __init__.py  view_sample_questions.py
backend/yourbench/pipeline/: answer_integration.py  chunking.py  citation_score_filtering.py  handler.py  ingestion.py  lighteval.py  multi_hop_question_generation.py  single_shot_question_generation.py  single_shot_question_generation_given_chunk.py  summarization.py  upload_ingest_to_hub.py
backend/yourbench/utils/: chunking_utils.py  dataset_engine.py  inference_engine.py  loading_engine.py  parsing_engine.py  prompts.py
docs/: index.html
docs/scripts/: script.js
docs/styles/: style.css
frontend/scripts/: script.js
frontend/styles/: style.css
