[project]
name = "yourbench"
version = "0.3.1"
authors = [
    { name = "Sumuk Shashidhar", email = "sumuks2@illinois.edu" },
    { name = "Alina Lozovskaia", email = "alina.lozovskaia@huggingface.co" },
    { name = "Clémentine Fourrier", email = "clementine@huggingface.co" },
    { name = "Nathan Habib", email = "nathan.habib@huggingface.co" },
]
description = "Dynamic Evaluation Set Generation with Large Language Models"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asyncio>=3.4.3",
    "black>=25.1.0",
    "click>=8.1.7",
    "datasets>=3.3.0",
    "flask>=3.1.1",
    "hf-transfer>=0.1.9",
    "huggingface-hub[inference,hf_xet]>=0.30.2",
    "loguru>=0.7.3",
    "markitdown[all]>=0.0.2",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "ruff>=0.11.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "thefuzz>=0.22.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.optional-dependencies]
semantic = [
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
]
all = [
    "yourbench[semantic]",
]

[project.scripts]
yourbench = "yourbench.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yourbench*"]

[tool.ruff]
line-length = 119
exclude = ["**/*.ipynb"]

lint.ignore = ["E501", "C901", "F841"]
lint.select = ["C", "E", "F", "I", "W"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "W"]
preview = true

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["yourbench"]
known-first-party = ["datasets", "huggingface_hub", "transformers", "torch"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
]
